exports[`test renders correctly when is filled 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "elevation": 2,
      "flexDirection": "row",
      "height": 45,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 5,
      "width": 730,
    }
  }>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginLeft": 5,
        "width": 40,
      }
    }>
    <Icon
      allowFontScaling={false}
      color="#929292"
      name="menu"
      size={30} />
  </TouchableOpacity>
  <BuiltTextfield
    blurOnSubmit={true}
    highlightColor="#3F51B5"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Search"
    returnKeyType="search"
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "height": 50,
        "justifyContent": "center",
        "width": 650,
      }
    }
    underlineEnabled={true}
    value="Some query" />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "height": 50,
        "justifyContent": "center",
        "width": 40,
      }
    }>
    <Icon
      allowFontScaling={false}
      color="#212121"
      name="close"
      size={20} />
  </TouchableOpacity>
</View>
`;

exports[`test renders correctly when no query 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "elevation": 2,
      "flexDirection": "row",
      "height": 45,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 5,
      "width": 730,
    }
  }>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginLeft": 5,
        "width": 40,
      }
    }>
    <Icon
      allowFontScaling={false}
      color="#929292"
      name="menu"
      size={30} />
  </TouchableOpacity>
  <BuiltTextfield
    blurOnSubmit={true}
    highlightColor="#3F51B5"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Search"
    returnKeyType="search"
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "height": 50,
        "justifyContent": "center",
        "width": 650,
      }
    }
    underlineEnabled={true} />
</View>
`;
